# minikanrenpp

./: CMakeLists.txt  Config.cmake.in  readme.md
minikanren/: CMakeLists.txt
minikanren/include/minikanren/: minikanren.hpp  operation.hpp  relation.hpp  relation_coroutine.hpp  run.hpp  variable.hpp
minikanren/include/minikanren/data/: fragmentable.hpp  list.hpp  recursive_value.hpp  value.hpp
minikanren/include/minikanrenpp/: minikanren.hpp  operation.hpp  relation.hpp  relation_coroutine.hpp  run.hpp  variable.hpp
minikanren/include/minikanrenpp/data/: fragmentable.hpp  list.hpp  recursive_value.hpp  value.hpp
minikanren/src/: operation.cpp  relation.cpp  relation_coroutine.cpp  run.cpp  variable.cpp
minikanren/src/inner/: id_allocator.hpp  manager.cpp  manager.hpp
minikanren/test/: CMakeLists.txt  test_minikanren.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
xvariant/: CMakeLists.txt
xvariant/include/minikanrenpp/xvariant/: descr.hpp  variant.hpp
xvariant/include/xvariant/: descr.hpp  variant.hpp
xvariant/test/: CMakeLists.txt  test_ref_variant.cpp  test_restrict.cpp  test_variant.cpp
