cmake_minimum_required(VERSION 3.5)

set(MINIKANRENPP "minikanrenpp")
set(MINIKANRENPP ${MINIKANRENPP} PARENT_SCOPE)

set(MINIKANRENPP_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

file(GLOB SRCS "src/*.cpp" "src/**/*.cpp")

add_library(${MINIKANRENPP} ${SRCS})
target_link_libraries(${MINIKANRENPP} PUBLIC ${MINIKANRENPP_XVARIANT})
target_include_directories(${MINIKANRENPP} PUBLIC
    "$<BUILD_INTERFACE:${MINIKANRENPP_INCLUDES}>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")

install(TARGETS ${MINIKANRENPP} EXPORT miniKanrenppTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY "${MINIKANRENPP_INCLUDES}/"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

add_subdirectory(test)
