cmake_minimum_required(VERSION 3.5)

set(MINIKANRENPP_XVARIANT "minikanrenpp_xvariant")
set(MINIKANRENPP_XVARIANT ${MINIKANRENPP_XVARIANT} PARENT_SCOPE)

set(MINIKANRENPP_XVARIANT_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

add_library(${MINIKANRENPP_XVARIANT} INTERFACE)
target_include_directories(${MINIKANRENPP_XVARIANT} INTERFACE
    "$<BUILD_INTERFACE:${MINIKANRENPP_XVARIANT_INCLUDES}>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")

install(TARGETS ${MINIKANRENPP_XVARIANT} EXPORT miniKanrenppTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY "${MINIKANRENPP_XVARIANT_INCLUDES}/"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

add_subdirectory(test)
